--- a/client-node-port.yaml
+++ b/client-node-port.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
-kind: Serice
+kind: Service
 metadta:
   name: clinet-node-port
 spec:
   type: NodePort
   ports:  
-    - ports: 3050
+    - port: 3050
       targetPort: 3000
       nodePort: 31515
   selector:
